--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@types/diff": "^7.0.1",
+    "@types/negotiator": "^0.6.3",
     "diff": "^7.0.0",
+    "i18next": "^24.2.3",
+    "negotiator": "^1.0.0",
     "next": "15.2.2",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
